[package]
name = "torrent_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
scraper = "0.18.1"
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
lazy_static = "1.4.0"
colored = "2.0.4"
